hphp/test/slow/shapes/int_literal_expression.php.expectf
Fatal error: Shape field name must be a nonempty single-quoted string or a class constant in %s on line 6
